--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,15 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "src/main.ts",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "dist/main.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "src/main.ts",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "HEAD",
-                "OPTIONS"
-            ]
-        }
+      {
+        "src": "/(.*)",
+        "dest": "dist/main.js"
+      }
     ]
-}
+  }
