--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "@nestjs/throttler": "^4.2.1",
         "@nestjs/typeorm": "^10.0.0",
         "@nestjs/websockets": "^10.2.6",
+        "@sentry/node": "^7.90.0",
+        "@sentry/profiling-node": "^1.3.2",
         "@socket.io/redis-adapter": "^8.2.1",
         "@types/mime-types": "^2.1.3",
         "@types/multer": "^1.4.8",
@@ -62,6 +64,7 @@
         "nest-winston": "^1.9.4",
         "nestjs-form-data": "^1.9.1",
         "nestjs-joi": "^1.9.0",
+        "netlify": "^13.1.11",
         "openai": "^4.12.4",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
