--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
         "rxjs": "^7.8.1",
         "streamifier": "^0.1.1",
         "typeorm": "0.3.17",
-        "winston": "^3.10.0",
+        "winston": "^3.10.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^15.0.0",
