--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
         "ts-loader": "^9.3.1",
         "ts-node": "^10.8.2",
         "tsconfig-paths": "^4.0.0",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "husky": "^8.0.3"
     },
     "jest": {
         "moduleFileExtensions": [
