--- a/package.json
+++ b/package.json
@@ -44,13 +44,17 @@
         "cloudinary": "^1.41.1",
         "cross-env": "^7.0.3",
         "dotenv": "^16.3.1",
+        "joi": "^17.11.0",
         "mongodb": "^5.9.2",
         "nest-winston": "^1.9.4",
         "nestjs-joi": "^1.10.0",
+        "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.5.5",
-        "streamifier": "^0.1.1"
+        "streamifier": "^0.1.1",
+        "typeorm": "^0.3.19",
+        "winston": "^3.11.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^9.0.0",
@@ -65,6 +69,7 @@
         "eslint": "^8.19.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.3",
         "jest": "^28.1.2",
         "prettier": "^2.7.1",
         "source-map-support": "^0.5.21",
@@ -73,8 +78,7 @@
         "ts-loader": "^9.3.1",
         "ts-node": "^10.8.2",
         "tsconfig-paths": "^4.0.0",
-        "typescript": "^4.7.4",
-        "husky": "^8.0.3"
+        "typescript": "^4.7.4"
     },
     "jest": {
         "moduleFileExtensions": [
